...
            android:gravity="center">
            <com.qinglenmeson.ootd.RotatedButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:gravity="center"
                android:text="Archives"
                android:onClick="openArchives"
                android:layout_alignParentRight="true" />
            <android.support.v4.widget.NestedScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
...
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+ Clothes"
            android:onClick="openAddClothing" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Generate Outfit"
            android:onClick="openGenerateOutfit" />
...
            android:layout_height="wrap_content"
            android:text="Clear Closet"
            android:onClick="reset" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Laundry"
            android:onClick="laundry"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Closet"
            android:onClick="editTitle"/>
...
