...
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Take Picture"
                android:onClick="takePicture" />
        <Button
            android:id="@+id/add_clothing_add_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:text="+ Add"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

