...
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"/>
                <EditText android:id="@+id/clothingadd_EditName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="40dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />
...
                    <TextView
                        android:id="@+id/clothingadd_WearIndicator"
                        android:layout_width="50dp"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/clothingadd_PlusWear"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="+"/>
                </LinearLayout>


...
