<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@+id/clothingedit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"/>
                <EditText android:id="@+id/clothingedit_EditName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="40dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cleanliness"/>
                <Spinner android:id="@+id/clothingedit_ChangeCleanliness"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Times worn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/clothingedit_MinusWear"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="-"/>
                    <TextView
                        android:id="@+id/clothingedit_WearIndicator"
                        android:layout_width="50dp"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/clothingedit_PlusWear"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="+"/>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Category"/>
                <TextView android:id="@+id/clothingedit_Category"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Image"/>
                <ImageView
                    android:id="@+id/clothingedit_Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/clothingedit_SetImage"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Show Image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Color"/>
                <ImageView
                    android:id="@+id/clothingedit_Color"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <com.skydoves.colorpickerview.ColorPickerView
                    android:id="@+id/colorPickerView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:src="@drawable/palette"
                    app:selector="@drawable/wheel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Warmth"/>
                <Spinner android:id="@+id/clothingedit_ChangeWarmth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Occasion"/>
                <Spinner android:id="@+id/clothingedit_ChangeOccasion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <Space
                    android:layout_width="1dp"
                    android:layout_height="50dp"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</merge>